New in master
=============

Bugfixes
--------

* Don’t warn about ``nikolademo`` DISQUS account when comments are
  disabled (Issue #2588)
* Make ``data`` from global context available to templated shortcodes
  as ``global_data`` (Issue #2488)
* Don't crash if plugins is a file (Issue #2539)
* Don't mangle bare ``#`` links (Issue #2553)

Features
--------

* Query strings in magic links are passed as keyword arguments to path
  handlers (via Issue #2580)
* Accept arbitrary arguments to path handlers (via Issue #2580)
* Added new ``typogrify_oldschool`` filter (Issue #2574)
* Improving handling of .dep files, and allowing compilers to specify
  additional targets for the render_posts task (Issue #2536)
* ``render_template`` and ``generic_renderer`` can now create HTML
  fragments.
* Allow posts to set custom ``URL_TYPE`` by using the ``url_type``
  meta tag (useful for HTML fragments inserted using JavaScript)
* Plugins can depend on other plugins being installed (Issue #2533)
* The destination folder in ``POSTS`` and ``PAGES`` can now be
  translated (Issue #2116)
* Pass ``post`` object and ``lang`` to post compilers (Issue #2531)
* Pass ``url_type`` into template's context.
* Make thumbnail naming configurable with ``IMAGE_THUMBNAIL_FORMAT``.
* There is a new plugin category ``Taxonomy`` which allows to easily
  create new taxonomies. Some of the existing taxonomies (authors,
  archives, indexes, page index, sections, tags, and categories)
  have been converted to the new system. (Issue #2107)
* Added ``CATEGORIES_INDEX_PATH``, similar to ``TAGS_INDEX_PATH``.
  (Issue #2567)
* Made ``INDEX_PATH``, ``RSS_PATH`` and ``AUTHOR_PATH`` translatable.
  (Issue #1914)
* Added setting ``SHOW_INDEX_PAGE_NAVIGATION`` which enables a basic
  page navigation for indexes. (Issue #2299)

New in v7.8.1
=============

Bugfixes
--------

* Rename ``stories`` to ``pages`` in most of the codebase (Issue
  #1891)
* Report missing/unknown dates in posts with filenames